# mkdocs-test

./: README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: about.md  index.md
